--- a/shazam.html
+++ b/shazam.html
@@ -23,6 +23,8 @@
                 href="https://github.com/SuperAL/canvas2image">canvas2image.js</a></p>
     </div>
 
+    <p>test</p>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 
     <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
